'adding user mangment system'

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -54,6 +54,20 @@
             <i class="ph-duotone ph-handshake text-xl"></i>
             <span class="mr-3 whitespace-nowrap" x-show="sidebarOpen">الشركاء والمزودين</span>
         </a>
+
+        {% if user.role == 'BROKER_ADMIN' %}
+        <div class="px-6 pt-4 pb-2">
+            <p class="text-[10px] font-bold text-slate-500 uppercase tracking-widest" x-show="sidebarOpen">إدارة النظام
+            </p>
+            <div class="h-px bg-slate-800 w-full mt-2" x-show="!sidebarOpen"></div>
+        </div>
+
+        <a href="{% url 'user_list' %}"
+            class="flex items-center px-6 py-3 text-slate-400 hover:bg-slate-800 hover:text-white transition group {% if '/users/' in request.path %}bg-slate-800/50 text-brand-400 border-r-2 border-brand-500{% endif %}">
+            <i class="ph-duotone ph-users-three text-xl"></i>
+            <span class="mr-3 whitespace-nowrap" x-show="sidebarOpen">إدارة المستخدمين</span>
+        </a>
+        {% endif %}
         {% endif %}
 
         {% if user.is_hr %}
