--- a/templates/clients/client_detail.html
+++ b/templates/clients/client_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="max-w-4xl mx-auto">
+<div class="w-full px-6">
 
     <div class="mb-6 flex items-center justify-between">
         <div>
